# WindingNumber

./: CMakeLists.txt  LICENSE  README.md  SYS_Math.h  SYS_Types.h  UT_Array.cpp  UT_Array.h  UT_ArrayImpl.h  UT_BVH.h  UT_BVHImpl.h  UT_FixedVector.h  UT_ParallelUtil.h  UT_SmallArray.h  UT_SolidAngle.cpp  UT_SolidAngle.h  VM_SIMD.h  VM_SSEFunc.h
cmake/recipes/: onetbb.cmake  simde.cmake
